--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-plumber": "^1.2.0",
-    "pug": "^2.0.3"
+    "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.0.1"
   }
 }
